// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> Snapshots should match snapshot when viewport is below then small breakpoint 1`] = `
.c2 {
  border-bottom: 1px solid;
  border-top: 1px solid;
  -webkit-transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,color 0.2s ease-in-out;
  border-color: #e0e0e0;
  color: #424242;
  padding: 8px 16px;
}

.c1 {
  border: 1px solid transparent;
  border-radius: 10px;
  cursor: pointer;
  font-weight: normal;
  outline: none;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 2px solid transparent;
  margin: 0 4px;
  padding: 8px;
  color: #1250C4;
  border-color: #e0e0e0;
  border-radius: 10px;
  border-width: 1px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  margin: 0;
}

.c1[aria-disabled=true] {
  display: none;
}

.c1[aria-disabled=false]:hover,
.c1[aria-disabled=false]:focus {
  background-color: #E5EDFC;
  border: 2px solid #1250C4;
}

.c1[aria-disabled=true] {
  color: #e0e0e0;
  cursor: not-allowed;
  display: block;
}

.c1[aria-disabled=false]:focus {
  border-width: 1px;
}

.c3 {
  border: 1px solid transparent;
  border-radius: 10px;
  cursor: pointer;
  font-weight: normal;
  outline: none;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 2px solid transparent;
  margin: 0 4px;
  padding: 8px;
  color: #1250C4;
  border-color: #e0e0e0;
  border-radius: 10px;
  border-width: 1px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  margin: 0;
}

.c3[aria-disabled=true] {
  display: none;
}

.c3[aria-disabled=false]:hover,
.c3[aria-disabled=false]:focus {
  background-color: #E5EDFC;
  border: 2px solid #1250C4;
}

.c3[aria-disabled=true] {
  color: #e0e0e0;
  cursor: not-allowed;
  display: block;
}

.c3[aria-disabled=false]:focus {
  border-width: 1px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<nav
  aria-label="pagination"
  className="c0"
>
  <a
    aria-disabled={true}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Previous
  </a>
  <span
    className="c2"
  >
    1 of 10
  </span>
  <a
    aria-disabled={false}
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    Next
  </a>
</nav>
`;

exports[`<Pagination /> Snapshots should match snapshot with 5 pages 1`] = `
.c1 {
  border: 1px solid transparent;
  border-radius: 10px;
  cursor: pointer;
  font-weight: normal;
  outline: none;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 2px solid transparent;
  margin: 0 4px;
  padding: 8px;
  color: #1250C4;
}

.c1[aria-disabled=true] {
  display: none;
}

.c1[aria-disabled=false]:hover,
.c1[aria-disabled=false]:focus {
  background-color: #E5EDFC;
  border: 2px solid #1250C4;
}

.c2 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #1250C4;
  border: 1px solid #1250C4;
  color: #ffffff;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c2:hover,
.c2:focus {
  background-color: #002F7B;
  border-color: #002F7B;
  color: #ffffff;
}

.c3 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #ffffff;
  border: 1px solid #e0e0e0;
  color: #424242;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c3:hover,
.c3:focus {
  background-color: #E5EDFC;
  border-color: #1250C4;
  color: #1250C4;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<nav
  aria-label="pagination"
  className="c0"
>
  <a
    aria-disabled={true}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Previous
  </a>
  <a
    aria-current="page"
    aria-label="Current Page, Page 1"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    1
  </a>
  <a
    aria-current={false}
    aria-label="Page 2"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    2
  </a>
  <a
    aria-current={false}
    aria-label="Page 3"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    3
  </a>
  <a
    aria-current={false}
    aria-label="Page 4"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    4
  </a>
  <a
    aria-current={false}
    aria-label="Page 5"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    5
  </a>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Next
  </a>
</nav>
`;

exports[`<Pagination /> Snapshots should match snapshot with 6 pages 1`] = `
.c1 {
  border: 1px solid transparent;
  border-radius: 10px;
  cursor: pointer;
  font-weight: normal;
  outline: none;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 2px solid transparent;
  margin: 0 4px;
  padding: 8px;
  color: #1250C4;
}

.c1[aria-disabled=true] {
  display: none;
}

.c1[aria-disabled=false]:hover,
.c1[aria-disabled=false]:focus {
  background-color: #E5EDFC;
  border: 2px solid #1250C4;
}

.c2 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #1250C4;
  border: 1px solid #1250C4;
  color: #ffffff;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c2:hover,
.c2:focus {
  background-color: #002F7B;
  border-color: #002F7B;
  color: #ffffff;
}

.c3 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #ffffff;
  border: 1px solid #e0e0e0;
  color: #424242;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c3:hover,
.c3:focus {
  background-color: #E5EDFC;
  border-color: #1250C4;
  color: #1250C4;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<nav
  aria-label="pagination"
  className="c0"
>
  <a
    aria-disabled={true}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Previous
  </a>
  <a
    aria-current="page"
    aria-label="Current Page, Page 1"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    1
  </a>
  <a
    aria-current={false}
    aria-label="Page 2"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    2
  </a>
  <a
    aria-current={false}
    aria-label="Page 3"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    3
  </a>
  <a
    aria-current={false}
    aria-label="Page 4"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    4
  </a>
  <a
    aria-current={false}
    aria-label="Page 5"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    5
  </a>
  <a
    aria-current={false}
    aria-label="Page 6"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    6
  </a>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Next
  </a>
</nav>
`;

exports[`<Pagination /> Snapshots should match snapshot with 7 pages 1`] = `
.c1 {
  border: 1px solid transparent;
  border-radius: 10px;
  cursor: pointer;
  font-weight: normal;
  outline: none;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 2px solid transparent;
  margin: 0 4px;
  padding: 8px;
  color: #1250C4;
}

.c1[aria-disabled=true] {
  display: none;
}

.c1[aria-disabled=false]:hover,
.c1[aria-disabled=false]:focus {
  background-color: #E5EDFC;
  border: 2px solid #1250C4;
}

.c4 {
  display: inline-block;
  margin: 0 4px;
  min-width: 22px;
}

.c5 {
  position: relative;
}

.c5,
.c5:after,
.c5:before {
  background-color: #e0e0e0;
  border-radius: 50%;
  display: inline-block;
  height: 5px;
  width: 5px;
}

.c5:after,
.c5:before {
  content: '';
  position: absolute;
  top: 0;
}

.c5:after {
  left: 8px;
}

.c5:before {
  left: 16px;
}

.c2 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #1250C4;
  border: 1px solid #1250C4;
  color: #ffffff;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c2:hover,
.c2:focus {
  background-color: #002F7B;
  border-color: #002F7B;
  color: #ffffff;
}

.c3 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #ffffff;
  border: 1px solid #e0e0e0;
  color: #424242;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c3:hover,
.c3:focus {
  background-color: #E5EDFC;
  border-color: #1250C4;
  color: #1250C4;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<nav
  aria-label="pagination"
  className="c0"
>
  <a
    aria-disabled={true}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Previous
  </a>
  <a
    aria-current="page"
    aria-label="Current Page, Page 1"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    1
  </a>
  <a
    aria-current={false}
    aria-label="Page 2"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    2
  </a>
  <a
    aria-current={false}
    aria-label="Page 3"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    3
  </a>
  <a
    aria-current={false}
    aria-label="Page 4"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    4
  </a>
  <div
    className="c4"
  >
    <span
      className="c5"
    />
  </div>
  <a
    aria-current={false}
    aria-label="Page 7"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    7
  </a>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Next
  </a>
</nav>
`;

exports[`<Pagination /> Snapshots should match snapshot with 7 pages and activePage equals 4 1`] = `
.c1 {
  border: 1px solid transparent;
  border-radius: 10px;
  cursor: pointer;
  font-weight: normal;
  outline: none;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 2px solid transparent;
  margin: 0 4px;
  padding: 8px;
  color: #1250C4;
}

.c1[aria-disabled=true] {
  display: none;
}

.c1[aria-disabled=false]:hover,
.c1[aria-disabled=false]:focus {
  background-color: #E5EDFC;
  border: 2px solid #1250C4;
}

.c3 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #1250C4;
  border: 1px solid #1250C4;
  color: #ffffff;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c3:hover,
.c3:focus {
  background-color: #002F7B;
  border-color: #002F7B;
  color: #ffffff;
}

.c2 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #ffffff;
  border: 1px solid #e0e0e0;
  color: #424242;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c2:hover,
.c2:focus {
  background-color: #E5EDFC;
  border-color: #1250C4;
  color: #1250C4;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<nav
  aria-label="pagination"
  className="c0"
>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Previous
  </a>
  <a
    aria-current={false}
    aria-label="Page 1"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    1
  </a>
  <a
    aria-current={false}
    aria-label="Page 2"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    2
  </a>
  <a
    aria-current={false}
    aria-label="Page 3"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    3
  </a>
  <a
    aria-current="page"
    aria-label="Current Page, Page 4"
    className="c3"
    onClick={[Function]}
    tabIndex={0}
  >
    4
  </a>
  <a
    aria-current={false}
    aria-label="Page 5"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    5
  </a>
  <a
    aria-current={false}
    aria-label="Page 6"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    6
  </a>
  <a
    aria-current={false}
    aria-label="Page 7"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    7
  </a>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Next
  </a>
</nav>
`;

exports[`<Pagination /> Snapshots should match snapshot with 7 pages and activePage equals 5 1`] = `
.c1 {
  border: 1px solid transparent;
  border-radius: 10px;
  cursor: pointer;
  font-weight: normal;
  outline: none;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 2px solid transparent;
  margin: 0 4px;
  padding: 8px;
  color: #1250C4;
}

.c1[aria-disabled=true] {
  display: none;
}

.c1[aria-disabled=false]:hover,
.c1[aria-disabled=false]:focus {
  background-color: #E5EDFC;
  border: 2px solid #1250C4;
}

.c3 {
  display: inline-block;
  margin: 0 4px;
  min-width: 22px;
}

.c4 {
  position: relative;
}

.c4,
.c4:after,
.c4:before {
  background-color: #e0e0e0;
  border-radius: 50%;
  display: inline-block;
  height: 5px;
  width: 5px;
}

.c4:after,
.c4:before {
  content: '';
  position: absolute;
  top: 0;
}

.c4:after {
  left: 8px;
}

.c4:before {
  left: 16px;
}

.c5 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #1250C4;
  border: 1px solid #1250C4;
  color: #ffffff;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c5:hover,
.c5:focus {
  background-color: #002F7B;
  border-color: #002F7B;
  color: #ffffff;
}

.c2 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #ffffff;
  border: 1px solid #e0e0e0;
  color: #424242;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c2:hover,
.c2:focus {
  background-color: #E5EDFC;
  border-color: #1250C4;
  color: #1250C4;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<nav
  aria-label="pagination"
  className="c0"
>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Previous
  </a>
  <a
    aria-current={false}
    aria-label="Page 1"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    1
  </a>
  <div
    className="c3"
  >
    <span
      className="c4"
    />
  </div>
  <a
    aria-current={false}
    aria-label="Page 4"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    4
  </a>
  <a
    aria-current="page"
    aria-label="Current Page, Page 5"
    className="c5"
    onClick={[Function]}
    tabIndex={0}
  >
    5
  </a>
  <a
    aria-current={false}
    aria-label="Page 6"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    6
  </a>
  <a
    aria-current={false}
    aria-label="Page 7"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    7
  </a>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Next
  </a>
</nav>
`;

exports[`<Pagination /> Snapshots should match snapshot with 7 pages and activePage equals 7 1`] = `
.c1 {
  border: 1px solid transparent;
  border-radius: 10px;
  cursor: pointer;
  font-weight: normal;
  outline: none;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 2px solid transparent;
  margin: 0 4px;
  padding: 8px;
  color: #1250C4;
}

.c1[aria-disabled=true] {
  display: none;
}

.c1[aria-disabled=false]:hover,
.c1[aria-disabled=false]:focus {
  background-color: #E5EDFC;
  border: 2px solid #1250C4;
}

.c3 {
  display: inline-block;
  margin: 0 4px;
  min-width: 22px;
}

.c4 {
  position: relative;
}

.c4,
.c4:after,
.c4:before {
  background-color: #e0e0e0;
  border-radius: 50%;
  display: inline-block;
  height: 5px;
  width: 5px;
}

.c4:after,
.c4:before {
  content: '';
  position: absolute;
  top: 0;
}

.c4:after {
  left: 8px;
}

.c4:before {
  left: 16px;
}

.c5 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #1250C4;
  border: 1px solid #1250C4;
  color: #ffffff;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c5:hover,
.c5:focus {
  background-color: #002F7B;
  border-color: #002F7B;
  color: #ffffff;
}

.c2 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #ffffff;
  border: 1px solid #e0e0e0;
  color: #424242;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c2:hover,
.c2:focus {
  background-color: #E5EDFC;
  border-color: #1250C4;
  color: #1250C4;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<nav
  aria-label="pagination"
  className="c0"
>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Previous
  </a>
  <a
    aria-current={false}
    aria-label="Page 1"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    1
  </a>
  <div
    className="c3"
  >
    <span
      className="c4"
    />
  </div>
  <a
    aria-current={false}
    aria-label="Page 4"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    4
  </a>
  <a
    aria-current="page"
    aria-label="Current Page, Page 5"
    className="c5"
    onClick={[Function]}
    tabIndex={0}
  >
    5
  </a>
  <a
    aria-current={false}
    aria-label="Page 6"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    6
  </a>
  <a
    aria-current={false}
    aria-label="Page 7"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    7
  </a>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Next
  </a>
</nav>
`;

exports[`<Pagination /> Snapshots should match snapshot with 100 pages and activePage equals 50 1`] = `
.c1 {
  border: 1px solid transparent;
  border-radius: 10px;
  cursor: pointer;
  font-weight: normal;
  outline: none;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 2px solid transparent;
  margin: 0 4px;
  padding: 8px;
  color: #1250C4;
}

.c1[aria-disabled=true] {
  display: none;
}

.c1[aria-disabled=false]:hover,
.c1[aria-disabled=false]:focus {
  background-color: #E5EDFC;
  border: 2px solid #1250C4;
}

.c3 {
  display: inline-block;
  margin: 0 4px;
  min-width: 22px;
}

.c4 {
  position: relative;
}

.c4,
.c4:after,
.c4:before {
  background-color: #e0e0e0;
  border-radius: 50%;
  display: inline-block;
  height: 5px;
  width: 5px;
}

.c4:after,
.c4:before {
  content: '';
  position: absolute;
  top: 0;
}

.c4:after {
  left: 8px;
}

.c4:before {
  left: 16px;
}

.c5 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #1250C4;
  border: 1px solid #1250C4;
  color: #ffffff;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c5:hover,
.c5:focus {
  background-color: #002F7B;
  border-color: #002F7B;
  color: #ffffff;
}

.c2 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #ffffff;
  border: 1px solid #e0e0e0;
  color: #424242;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c2:hover,
.c2:focus {
  background-color: #E5EDFC;
  border-color: #1250C4;
  color: #1250C4;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<nav
  aria-label="pagination"
  className="c0"
>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Previous
  </a>
  <a
    aria-current={false}
    aria-label="Page 1"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    1
  </a>
  <div
    className="c3"
  >
    <span
      className="c4"
    />
  </div>
  <a
    aria-current={false}
    aria-label="Page 49"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    49
  </a>
  <a
    aria-current="page"
    aria-label="Current Page, Page 50"
    className="c5"
    onClick={[Function]}
    tabIndex={0}
  >
    50
  </a>
  <a
    aria-current={false}
    aria-label="Page 51"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    51
  </a>
  <div
    className="c3"
  >
    <span
      className="c4"
    />
  </div>
  <a
    aria-current={false}
    aria-label="Page 100"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    100
  </a>
  <a
    aria-disabled={false}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Next
  </a>
</nav>
`;

exports[`<Pagination /> Snapshots should match snapshot without props 1`] = `
.c1 {
  border: 1px solid transparent;
  border-radius: 10px;
  cursor: pointer;
  font-weight: normal;
  outline: none;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  transition: color 0.2s ease-in-out,background-color 0.2s ease-in-out,border 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  border-radius: 4px;
  border: 2px solid transparent;
  margin: 0 4px;
  padding: 8px;
  color: #1250C4;
}

.c1[aria-disabled=true] {
  display: none;
}

.c1[aria-disabled=false]:hover,
.c1[aria-disabled=false]:focus {
  background-color: #E5EDFC;
  border: 2px solid #1250C4;
}

.c2 {
  font-weight: bold;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 10px;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 40px;
  min-width: 40px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out,border-color 0.2s ease-in-out,color 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #1250C4;
  border: 1px solid #1250C4;
  color: #ffffff;
  font-size: 16px;
  margin: 0 4px;
  padding: 4px 8px;
}

.c2:hover,
.c2:focus {
  background-color: #002F7B;
  border-color: #002F7B;
  color: #ffffff;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<nav
  aria-label="pagination"
  className="c0"
>
  <a
    aria-disabled={true}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Previous
  </a>
  <a
    aria-current="page"
    aria-label="Current Page, Page 1"
    className="c2"
    onClick={[Function]}
    tabIndex={0}
  >
    1
  </a>
  <a
    aria-disabled={true}
    className="c1"
    onClick={[Function]}
    tabIndex={0}
  >
    Next
  </a>
</nav>
`;
